--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   },
   "name": "backend",
   "version": "1.0.0",
-  "main": "Hello.js",
+  "main": "index.js",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
